syntax = "proto3";
package pb;
import "google/api/annotations.proto";

service DeviceService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserRequest) {
        option (google.api.http) = {
            post: "/api/v1/users"
            body: "*"
        };
    }

    // List all registered devices
    rpc GetAllDevices (Empty) returns (Devices) {
        option (google.api.http) = {
            get: "/api/v1/users/{account.name}/devices"
        };
    }

    // Get a device by ID
    rpc GetDeviceByID (ID) returns (Device) {
        option (google.api.http) = {
            get: "/api/v1/users/{account.name}/devices/{id}"
        };
    }

    // Update a device's state
    rpc SwitchDevice (UpdateDevice) returns (Device) {}

    // Register a new device
    rpc RegisterDevice (Device) returns (Device) {
        option (google.api.http) = {
            post: "/api/v1/users/{account.name}/devices"
            body: "*"
        };
    }
}

message CreateUserRequest{
    string name = 1;
    string email = 2;
    string password = 3;
}

message User{
    string name = 1;
    string email = 2;
    string password = 3;
    repeated Device devices = 4;
}

message ID {
    User account = 1;
    int32 id = 2;
};

message UpdateDevice {
    User account = 1;
    int32 id = 2;
    int32 value = 3;
};

message Device {
    int32 id = 1;
    string hardware = 2;
    string name = 3;
    string location = 4;
    enum DeviceType {
        onOff = 0;
        dimmer = 1;
        sensor = 2;
    }

    DeviceType type = 5;
    string unit = 6;
    int32 state = 7;
    User account = 8;
};

message Devices {
    repeated Device device = 1;
};

message Empty {
    User account = 1;
};